--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,12 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  background: #D9DBE1;
 }
 .App {
+  margin: 0 auto;
   width: 80vw;
   text-align: center;
   font-family: 'Poppins', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 li{
