--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -38,7 +38,7 @@ nav ul li a:hover{
         right: 2rem;
         top: 5rem;
         align-items: end;
-        background: #D9DBE1;
+        background: #d9dbe1;
         padding: 2rem;
         display: none;
     }
