--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,11 +1,17 @@
 .hero {
+    width: 100%;
     display: flex;
     align-items: center;
-    gap: 6rem;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    justify-content: center;
+    min-height: 80vh;
+}
+
+.hero > div {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
 
 }
 
@@ -64,18 +70,21 @@
 }
 
 @media screen and (max-width: 800px) {
-    .hero {
+    .hero > div { 
+
         flex-direction: column;
+    }
+
+    .hero img {
+        margin-bottom: 3rem;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .hero {
-        gap: 4rem;
-    }
-
+    
     .hero img {
         width: 200px;
+        margin-bottom: 1rem;
     }
 
     .hero__detail span:nth-child(1) {
