--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -69,6 +69,24 @@
     transition: all 300ms ease;
 }
 
+.fa-envelope {
+    position: fixed;
+    font-size: 2rem;
+    bottom: 5rem;
+    right: 3rem;
+    padding: 1rem;
+    background: #d9dbe1;
+    border-radius: 2rem 0;
+    transition: all 300ms ease-in-out;
+    color: #6a5acd;
+}
+
+.fa-envelope:hover {
+    background: #6a5acd;
+    color: #fff;
+    transform: scale(0.90);
+}
+
 @media screen and (max-width: 800px) {
     .hero > div { 
 
