--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,13 +1,13 @@
 .about {
-    height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 3rem;
 }
 
 .about__main-details {
     width: 100%;
-    top: 50%;
-    left: 50%;
-    position: relative;
-    transform: translate(-50%, -50%);
     display: flex;
     gap: 3rem;
 
@@ -47,4 +47,28 @@
     font-size: 1.2rem;
     text-align: left;
     margin-top: 2rem;
+}
+
+@media screen and (max-width: 1200px){
+    .about__main-details {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 800px){
+    
+    .about__main-details > img {
+        width: 350px;
+        border-radius: 4rem 0;
+        background: #d9dbe1;
+    }
+    .about_detail {
+        flex-direction: column;
+    }
+
+    .about_detail > span {
+        width: 100%;
+    }
 }
